add gif capture

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     </section>
 </div>
-    <audio controls autoplay><source src="../XFilesMainThemeRingtone.mp3" type="audio/ogg"></audio>
+    <audio controls autoplay><source src="XFilesMainThemeRingtone.mp3" type="audio/ogg"></audio>
 </body>
 
     <footer class="footer">
