--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <div class="container">
         <div class="box">
             <div class="gif">
-                <img id="gif" src="https://media.giphy.com/media/l2SqcdslWVBen1LZm/giphy.gif"  frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-                <!-- <p><a href="https://giphy.com/gifs/southparkgifs-l2SqcdslWVBen1LZm"></a></p> -->
+                <img id="gif" src="https://media.giphy.com/media/l2SqcdslWVBen1LZm/giphy.gif"  frameBorder="0" class="giphy-embed" allowFullScreen>
             </div>
             <div id="logo">
+                    <br>
+                    <br>
                     <a href="index.html">Aliens</a>
                     <br>
                     <a href="index.html">in Pop Culture</a>
@@ -48,7 +49,7 @@
     </div>
     </section>
 </div>
-    <audio controls autoplay><source src="XFilesMainThemeRingtone.mp3" type="audio/ogg"></audio>
+    <!-- <audio controls autoplay><source src="XFilesMainThemeRingtone.mp3" type="audio/ogg"></audio> -->
 </body>
 
     <footer class="footer">
