fixed file set up and readme

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Alien Word Guess</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alien Word Guess</title>
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Akronim" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="logic.js"></script>
-        
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+        <script src="./assets/js/logic.js"></script>
 </head>
 
 <body>
@@ -49,11 +48,10 @@
     </div>
     </section>
 </div>
-    <!-- <audio controls autoplay><source src="XFilesMainThemeRingtone.mp3" type="audio/ogg"></audio> -->
-</body>
 
-    <footer class="footer">
-        <p>Copyright© Elyza Bleau</p>
-    </footer>
-    
+<footer class="footer">
+    <p>Copyright© Elyza Bleau</p>
+</footer>
+
+</body>
 </html>
